Bug 501688 - Apps crash in Breeze::ToolsAreaManager::configUpdated()
Summary: Apps crash in Breeze::ToolsAreaManager::configUpdated()
Status: RESOLVED FIXED
Alias: None
Product: Breeze
Classification: Plasma
Component: QStyle (other bugs)
Version First Reported In: 6.3.3
Platform: Fedora RPMs Linux
: VHI crash
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: drkonqi, regression
: 501558 501570 501601 501675 501689 501718 501720 501738 501744 501775 501785 501841 501868 501870 501890 501899 502205 502278 502300 502318 502699 (view as bug list)
Depends on:
Blocks:
 
Reported: 2025-03-18 11:23 UTC by Roke Julian Lockhart Beedell
Modified: 2025-04-27 21:02 UTC (History)
21 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.3.4
Sentry Crash Report: https://crash-reports.kde.org/organizations/kde/issues/148184/


Attachments
New crash information added by DrKonqi (69.52 KB, text/plain)
2025-03-18 11:23 UTC, Roke Julian Lockhart Beedell
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Roke Julian Lockhart Beedell 2025-03-18 11:23:28 UTC
Application: systemsettings (6.3.3)

ApplicationNotResponding [ANR]: false
Qt Version: 6.8.2
Frameworks Version: 6.12.0
Operating System: Linux 6.13.6-200.fc41.x86_64 x86_64
Windowing System: Wayland
Distribution: "Fedora Linux 41 (KDE Plasma)"
DrKonqi: 6.3.3 [CoredumpBackend]

-- Information about the crash:
I moved the MP4 file I was using into a subdirectory of "$HOME/Documents" and re-selected it in "store.kde.org/p/2139746"'s GUI, accessible via "kcm_screenlocker"'s "Appearance" page. Once I had closed the window, I saw a notification from GNOME Abrt and Dr Konqi that it had crashed.

The crash can be reproduced every time.

-- Backtrace (Reduced):
#5  QLayout::menuBar (this=0x1) at /usr/src/debug/qt6-qtbase-6.8.2-3.fc41.x86_64/src/widgets/kernel/qlayout.cpp:898
#6  0x00007f3ce98040ee in QMainWindow::menuBar (this=this@entry=0x55cc5980d330) at /usr/src/debug/qt6-qtbase-6.8.2-3.fc41.x86_64/src/widgets/widgets/qmainwindow.cpp:465
#7  0x00007f3cd007a071 in Breeze::ToolsAreaManager::configUpdated (this=0x55cc597b6270) at /usr/src/debug/plasma-breeze-6.3.3-1.fc41.x86_64/kstyle/breezetoolsareamanager.cpp:144
#8  0x00007f3ce855a26e in QtPrivate::QSlotObjectBase::call (this=0x55cc59848a80, r=<optimized out>, a=0x7ffce1ea4590) at /usr/src/debug/qt6-qtbase-6.8.2-3.fc41.x86_64/src/corelib/kernel/qobjectdefs_impl.h:486
#9  doActivate<false> (sender=0x55cc597b6370, signal_index=3, argv=0x7ffce1ea4590) at /usr/src/debug/qt6-qtbase-6.8.2-3.fc41.x86_64/src/corelib/kernel/qobject.cpp:4115


Reported using DrKonqi
Comment 1 Roke Julian Lockhart Beedell 2025-03-18 11:23:29 UTC
Created attachment 179534 [details]
New crash information added by DrKonqi

DrKonqi auto-attaching complete backtrace.
Comment 2 Roke Julian Lockhart Beedell 2025-03-18 11:26:11 UTC
*** Bug 501689 has been marked as a duplicate of this bug. ***
Comment 3 Roke Julian Lockhart Beedell 2025-03-18 23:58:47 UTC
*** Bug 501718 has been marked as a duplicate of this bug. ***
Comment 4 Nate Graham 2025-03-19 21:15:35 UTC
*** Bug 501744 has been marked as a duplicate of this bug. ***
Comment 5 Nate Graham 2025-03-19 21:19:19 UTC
https://invent.kde.org/plasma/breeze/-/commit/eedba7e7b912267e6ca6d4067dc39e731e38775b looks related, and was released in Plasma 6.3.3, when the bug started to appear for people.
Comment 6 Bug Janitor Service 2025-03-20 08:18:17 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/breeze/-/merge_requests/536
Comment 7 TraceyC 2025-03-21 00:14:38 UTC
*** Bug 501558 has been marked as a duplicate of this bug. ***
Comment 8 TraceyC 2025-03-21 00:18:30 UTC
*** Bug 501785 has been marked as a duplicate of this bug. ***
Comment 9 TraceyC 2025-03-21 00:20:50 UTC
*** Bug 501601 has been marked as a duplicate of this bug. ***
Comment 10 TraceyC 2025-03-21 00:22:18 UTC
*** Bug 501720 has been marked as a duplicate of this bug. ***
Comment 11 TraceyC 2025-03-21 00:24:49 UTC
*** Bug 501738 has been marked as a duplicate of this bug. ***
Comment 12 TraceyC 2025-03-21 00:26:41 UTC
*** Bug 501775 has been marked as a duplicate of this bug. ***
Comment 13 TraceyC 2025-03-21 00:29:38 UTC
*** Bug 501675 has been marked as a duplicate of this bug. ***
Comment 14 Antonio Rojas 2025-03-22 17:56:18 UTC
*** Bug 501841 has been marked as a duplicate of this bug. ***
Comment 15 Antonio Rojas 2025-03-22 17:56:40 UTC
*** Bug 501868 has been marked as a duplicate of this bug. ***
Comment 16 Antonio Rojas 2025-03-22 17:57:07 UTC
*** Bug 501870 has been marked as a duplicate of this bug. ***
Comment 17 Antonio Rojas 2025-03-22 17:57:30 UTC
*** Bug 501570 has been marked as a duplicate of this bug. ***
Comment 18 Bug Janitor Service 2025-03-22 23:53:10 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/breeze/-/merge_requests/537
Comment 19 Antonio Rojas 2025-03-23 09:05:11 UTC
*** Bug 501890 has been marked as a duplicate of this bug. ***
Comment 20 Axel Braun 2025-03-23 10:11:52 UTC
(In reply to Bug Janitor Service from comment #18)
> A possibly relevant merge request was started @
> https://invent.kde.org/plasma/breeze/-/merge_requests/537

I really hope that fixes it! Kmail crashes a couple of times per day. Seriously annoying
Comment 21 Antonio Rojas 2025-03-23 12:56:20 UTC
*** Bug 501899 has been marked as a duplicate of this bug. ***
Comment 22 Bug Janitor Service 2025-03-23 22:28:05 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/breeze/-/merge_requests/538
Comment 23 Nate Graham 2025-03-25 16:34:59 UTC
Git commit e026c1461d8fdd33e939ed397b229762271f8a31 by Nate Graham, on behalf of Albert Astals Cid.
Committed on 25/03/2025 at 16:34.
Pushed by ngraham into branch 'master'.

ToolsAreaManager: Store windows as a vector

There's not that many main windows to justify a hash.

Also this way we can be sure to only append windows in
one place, and thus can add the connection for the
window destruction in that place.
FIXED-IN: 6.3.4

M  +1    -1    kstyle/breezestyle.cpp
M  +58   -35   kstyle/breezetoolsareamanager.cpp
M  +11   -4    kstyle/breezetoolsareamanager.h

https://invent.kde.org/plasma/breeze/-/commit/e026c1461d8fdd33e939ed397b229762271f8a31
Comment 24 Nate Graham 2025-03-25 16:43:46 UTC
Git commit 93d92fcc70bca41ca3b0c3558ca355878f4cfb71 by Nate Graham.
Committed on 25/03/2025 at 16:35.
Pushed by ngraham into branch 'Plasma/6.3'.

ToolsAreaManager: Store windows as a vector

There's not that many main windows to justify a hash.

Also this way we can be sure to only append windows in
one place, and thus can add the connection for the
window destruction in that place.
FIXED-IN: 6.3.4


(cherry picked from commit e026c1461d8fdd33e939ed397b229762271f8a31)

ac91a0a4 ToolsAreaManager: Store windows as a vector

Co-authored-by: Albert Astals Cid <aacid@kde.org>

M  +1    -1    kstyle/breezestyle.cpp
M  +58   -35   kstyle/breezetoolsareamanager.cpp
M  +11   -4    kstyle/breezetoolsareamanager.h

https://invent.kde.org/plasma/breeze/-/commit/93d92fcc70bca41ca3b0c3558ca355878f4cfb71
Comment 25 Nicolas Fella 2025-03-30 16:44:27 UTC
*** Bug 502205 has been marked as a duplicate of this bug. ***
Comment 26 Antonio Rojas 2025-04-01 13:38:00 UTC
*** Bug 502278 has been marked as a duplicate of this bug. ***
Comment 27 psedlak 2025-04-05 23:30:17 UTC
*** Bug 502318 has been marked as a duplicate of this bug. ***
Comment 28 Antonio Rojas 2025-04-12 08:43:40 UTC
*** Bug 502699 has been marked as a duplicate of this bug. ***
Comment 29 Christoph Cullmann 2025-04-27 18:55:52 UTC
*** Bug 502300 has been marked as a duplicate of this bug. ***