ToolsAreaManager: Store windows as QPointer

This way we make sure they still exist when we try to use them

BUG: 501688