kstyle/breezetoolsareamanager.cpp
@@ -46,7 +46,7 @@ void ToolsAreaManager::recreateConfigWatcher(const QString &path)
 template<class T1, class T2>
 void appendIfNotAlreadyExists(T1 *list, T2 item)
 {
-    for (auto listItem : *list) {
+    for (const auto &listItem : *list) {
         if (listItem == item) {
             return;
         }
@@ -66,24 +66,25 @@ void ToolsAreaManager::registerApplication(QApplication *application)
     configUpdated();
 }
 
-QRect ToolsAreaManager::toolsAreaRect(const QMainWindow *window)
+QRect ToolsAreaManager::toolsAreaRect(const QMainWindow &window) const
 {
-    Q_ASSERT(window);
+    const QPointer windowPtr = &window;
 
-    int itemHeight = window->menuWidget() ? window->menuWidget()->height() : 0;
-    for (auto item : _windows[window]) {
-        if (!item.isNull() && item->isVisible() && window->toolBarArea(item) == Qt::TopToolBarArea) {
-            itemHeight = qMax(item->mapTo(window, item->rect().bottomLeft()).y(), itemHeight);
+    int itemHeight = window.menuWidget() ? window.menuWidget()->height() : 0;
+    const auto toolBars = _windows.value(windowPtr);
+    for (auto item : toolBars) {
+        if (!item.isNull() && item->isVisible() && window.toolBarArea(item) == Qt::TopToolBarArea) {
+            itemHeight = qMax(item->mapTo(&window, item->rect().bottomLeft()).y(), itemHeight);
         }
     }
     if (itemHeight > 0) {
         itemHeight += 1;
     }
 
-    return QRect(0, 0, window->width(), itemHeight);
+    return QRect(0, 0, window.width(), itemHeight);
 }
 
-bool ToolsAreaManager::tryRegisterToolBar(QPointer<QMainWindow> window, QPointer<QWidget> widget)
+bool ToolsAreaManager::tryRegisterToolBar(QPointer<const QMainWindow> window, QPointer<QWidget> widget)
 {
     Q_ASSERT(!widget.isNull());
 
@@ -101,7 +102,7 @@ bool ToolsAreaManager::tryRegisterToolBar(QPointer<QMainWindow> window, QPointer
     return false;
 }
 
-void ToolsAreaManager::tryUnregisterToolBar(QPointer<QMainWindow> window, QPointer<QWidget> widget)
+void ToolsAreaManager::tryUnregisterToolBar(QPointer<const QMainWindow> window, QPointer<QWidget> widget)
 {
     Q_ASSERT(!widget.isNull());
 
@@ -131,18 +132,23 @@ void ToolsAreaManager::configUpdated()
     _palette.setBrush(QPalette::Inactive, QPalette::Window, inactive.background());
     _palette.setBrush(QPalette::Inactive, QPalette::WindowText, inactive.foreground());
 
-    for (auto it = _windows.constBegin(); it != _windows.constEnd(); ++it) {
-        const QMainWindow *window = it.key();
-        const QVector<QPointer<QToolBar>> &toolbars = it.value();
+    for (auto it = _windows.begin(); it != _windows.end();) {
+        const QPointer<const QMainWindow> window = it.key();
+        if (window) {
+            const QVector<QPointer<QToolBar>> &toolbars = it.value();
 
-        for (const auto &toolbar : toolbars) {
-            if (!toolbar.isNull()) {
-                toolbar->setPalette(_palette);
+            for (const auto &toolbar : toolbars) {
+                if (!toolbar.isNull()) {
+                    toolbar->setPalette(_palette);
+                }
             }
-        }
 
-        if (QMenuBar *menuBar = window->menuBar()) {
-            menuBar->setPalette(_palette);
+            if (QMenuBar *menuBar = window->menuBar()) {
+                menuBar->setPalette(_palette);
+            }
+            ++it;
+        } else {
+            it = _windows.erase(it);
         }
     }
 
@@ -182,7 +188,7 @@ bool ToolsAreaManager::eventFilter(QObject *watched, QEvent *event)
     Q_ASSERT(event);
 
     QPointer<QObject> parent = watched;
-    QPointer<QMainWindow> mainWindow = nullptr;
+    QPointer<const QMainWindow> mainWindow = nullptr;
     while (parent != nullptr) {
         if (qobject_cast<QMainWindow *>(parent)) {
             mainWindow = qobject_cast<QMainWindow *>(parent);
@@ -191,7 +197,7 @@ bool ToolsAreaManager::eventFilter(QObject *watched, QEvent *event)
         parent = parent->parent();
     }
 
-    if (QPointer<QMainWindow> mw = qobject_cast<QMainWindow *>(watched)) {
+    if (QPointer<const QMainWindow> mw = qobject_cast<QMainWindow *>(watched)) {
         QChildEvent *ev = nullptr;
         if (event->type() == QEvent::ChildAdded || event->type() == QEvent::ChildRemoved) {
             ev = static_cast<QChildEvent *>(event);
@@ -232,9 +238,9 @@ void ToolsAreaManager::registerWidget(QWidget *widget)
     Q_ASSERT(widget);
     auto ptr = QPointer<QWidget>(widget);
 
-    QPointer<QMainWindow> mainWindow = qobject_cast<QMainWindow *>(ptr);
+    QPointer<const QMainWindow> mainWindow = qobject_cast<QMainWindow *>(ptr);
 
-    if (mainWindow && mainWindow == mainWindow->window()) {
+    if (mainWindow && mainWindow.data() == mainWindow->window()) {
         const auto toolBars = mainWindow->findChildren<QToolBar *>(QString(), Qt::FindDirectChildrenOnly);
         for (auto *toolBar : toolBars) {
             tryRegisterToolBar(mainWindow, toolBar);
@@ -261,7 +267,7 @@ void ToolsAreaManager::registerWidget(QWidget *widget)
     if (mainWindow == nullptr) {
         return;
     }
-    if (mainWindow != mainWindow->window()) {
+    if (mainWindow.data() != mainWindow->window()) {
         return;
     }
     tryRegisterToolBar(mainWindow, widget);
@@ -272,12 +278,12 @@ void ToolsAreaManager::unregisterWidget(QWidget *widget)
     Q_ASSERT(widget);
     auto ptr = QPointer<QWidget>(widget);
 
-    if (QPointer<QMainWindow> window = qobject_cast<QMainWindow *>(ptr)) {
+    if (QPointer<const QMainWindow> window = qobject_cast<QMainWindow *>(ptr)) {
         _windows.remove(window);
         return;
     } else if (QPointer<QToolBar> toolbar = qobject_cast<QToolBar *>(ptr)) {
         auto parent = ptr;
-        QPointer<QMainWindow> mainWindow = nullptr;
+        QPointer<const QMainWindow> mainWindow = nullptr;
         while (parent != nullptr) {
             if (qobject_cast<QMainWindow *>(parent)) {
                 mainWindow = qobject_cast<QMainWindow *>(parent);
